# pkg/handler/handler.go
@@ -48,10 +48,10 @@ func (h *Handler) InitRoutes() *gin.Engine {
 	{
 		auth.POST("/signup", h.signup)
 		auth.POST("/login", h.login)
+		auth.POST("/loginn", h.login)
 
 		auth.GET("/juststeam", h.signupJustSteam)
 		auth.GET("/juststeam/callback", h.callbackJustSteam)
-		auth.GET("/juststeamm/callback", h.callbackJustSteam)
 
 		auth.GET("/steam/callback", h.callbackSteam)
 
